screening script and DS Store deletion

--- a/code/screening_script.ipynb
+++ b/code/screening_script.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "94c04d31",
    "metadata": {},
    "outputs": [
@@ -20,9 +20,15 @@
     "import os\n",
     "import json\n",
     "import csv\n",
+    "from groo.groo import get_root\n",
     "\n",
-    "DATA_FOLDER = \"/Users/giancarlodeiana/Desktop/root_folder/g-casa_screening_task/data\"\n",
-    "OUTPUT_FOLDER = \"/Users/giancarlodeiana/Desktop/root_folder/g-casa_screening_task/outputs\"\n",
+    "\n",
+    "# Automatically find project root\n",
+    "ROOT_FOLDER = get_root(\".root_jacobs\")\n",
+    "\n",
+    "# Set data and output folders relative to root\n",
+    "DATA_FOLDER = os.path.join(ROOT_FOLDER, \"g-casa_screening_task\", \"data\")\n",
+    "OUTPUT_FOLDER = os.path.join(ROOT_FOLDER, \"g-casa_screening_task\", \"outputs\")\n",
     "OUTPUT_FILE = \"screening_results.csv\"\n",
     "\n",
     "def is_boolean_list(lst):\n",
